--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "expo-linear-gradient": "^13.0.2",
-    "expo-status-bar": "~1.12.1",
+    "expo-router": "^3.5.23",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
