--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
     "expo-linear-gradient": "^13.0.2",
     "expo-router": "^3.5.23",
     "nativewind": "^2.0.11",
